--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
-read_comics/static/_frest/* linguist-vendored
-read_comics/static/app-assets/* linguist-vendored
-read_comics/static/fonts/* linguist-vendored
-read_comics/static/images/* linguist-vendored
-read_comics/static/twbsPagination/* linguist-vendored
+read_comics/static/_frest/** linguist-vendored
+read_comics/static/app-assets/** linguist-vendored
+read_comics/static/fonts/** linguist-vendored
+read_comics/static/images/** linguist-vendored
+read_comics/static/twbsPagination/** linguist-vendored
 
-docs/* linguist-documentation
+docs/** linguist-documentation
