--- a/.gitignore
+++ b/.gitignore
@@ -184,6 +184,9 @@ typings/
 .idea/**/sqlDataSources.xml
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
+.idea/deployment.xml
+.idea/sshConfigs.xml
+.idea/webServers.xml
 
 # Gradle:
 .idea/**/gradle.xml
