--- a/local.yml
+++ b/local.yml
@@ -11,10 +11,10 @@ services:
       dockerfile: ./compose/local/django/Dockerfile
     image: read_comics_local_django
     container_name: django
-    depends_on:
-      - postgres
-      - redis
-      - mailhog
+#    depends_on:
+#      - postgres
+#      - redis
+#      - mailhog
     volumes:
       - .:/app:z
     env_file:
