--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,6 @@ ignore_errors = True
 
 [coverage:run]
 include = read_comics/*
-omit = *migrations*, *tests*
-plugins =
-    django_coverage_plugin
+omit = *migrations*, *tests*, read_comics/templates/account/*, read_comics/templates/bootstrap4/*, read_comics/templates/socialaccount/*,
+plugins = django_coverage_plugin
+source = read_comics
