--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,8 +50,8 @@ jobs:
 
       - name: Run Django Tests
         run: |
-          - docker-compose -f local.yml run --rm django coverage run -m pytest
-          - docker-compose -f local.yml run --rm django coverage xml
+          docker-compose -f local.yml run --rm django coverage run -m pytest
+          docker-compose -f local.yml run --rm django coverage xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
