--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref_name = 'main'
+    if: github.event_name == 'push' && github.ref_name == 'main'
 
     steps:
       - name: Checkout master
