--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [flake8]
 max-line-length = 120
 exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv
+extend-select =
+    C4,Q0,INP
 
 [pycodestyle]
 max-line-length = 120
