--- a/local.yml
+++ b/local.yml
@@ -38,21 +38,21 @@ services:
     ports:
       - "5432:5432"
 
-  docs:
-    image: read_comics_local_docs
-    container_name: docs
-    build:
-      context: .
-      dockerfile: ./compose/local/docs/Dockerfile
-    env_file:
-      - ./.envs/.local/.django
-    volumes:
-      - ./docs:/docs:z
-      - ./config:/app/config:z
-      - ./read_comics:/app/read_comics:z
-    ports:
-      - "7001:7001"
-    command: /start-docs
+#  docs:
+#    image: read_comics_local_docs
+#    container_name: docs
+#    build:
+#      context: .
+#      dockerfile: ./compose/local/docs/Dockerfile
+#    env_file:
+#      - ./.envs/.local/.django
+#    volumes:
+#      - ./docs:/docs:z
+#      - ./config:/app/config:z
+#      - ./read_comics:/app/read_comics:z
+#    ports:
+#      - "7001:7001"
+#    command: /start-docs
 
   mailhog:
     image: mailhog/mailhog:v1.0.0
