new: code climate

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,16 +53,12 @@ jobs:
           docker-compose -f local.yml run --rm django coverage run -m pytest
           docker-compose -f local.yml run --rm django coverage xml
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v2
-        with:
-          fail_ci_if_error: true
-          token: ${{ secrets.CODECOV_TOKEN }}
-
       - name: Publish coverage to Code Climate
         uses: paambaati/codeclimate-action@v3.0.0
         env:
           CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+        with:
+          coverageCommand: docker-compose -f local.yml run --rm django coverage run -m pytest
 
       - name: Tear down the Stack
         run:  docker-compose -f local.yml down
