--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
         env:
           CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
         with:
-          coverageLocations: ${{github.workspace}}/coverage.xml:coverage.py
+          coverageCommand: coverage report
 
       - name: Tear down the Stack
         run:  docker-compose -f local.yml down
