--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref_name == 'main' && github.ref_type='tag'
+    if: github.event_name == 'push' && github.ref_name == 'main' && github.ref_type == 'tag'
     needs: build
 
     steps:
