--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,7 @@ jobs:
         id: get_version
         run: |
           echo "VERSION=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
-          echo ${{ VERSION }}
+          echo ${{ env.VERSION }}
 
       - uses: actions/checkout@v2
         with:
