--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
   build:
     needs: [linter, test]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref.name == 'main'
+    if: (github.ref == 'refs/heads/main' || github.ref_type == 'tag') && github.event_name == 'push'
 
     steps:
       - name: Checkout master
@@ -132,7 +132,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref.name == 'main'
+    if: (github.ref == 'refs/heads/main' || github.ref_type == 'tag') && github.event_name == 'push'
     needs: build
 
     steps:
