chg: display volumes finished status in sublists

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,13 +5,14 @@ extend-select =
     C4,Q0,INP
 inline-quotes = "
 avoid-escape = True
+min_python_version = 3.9.1
 
 [pycodestyle]
 max-line-length = 120
 exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv
 
 [isort]
-line_length = 88
+line_length = 120
 known_first_party = read_comics,config
 multi_line_output = 3
 default_section = THIRDPARTY
@@ -41,3 +42,6 @@ ignore_errors = True
 omit = *migrations*, *tests*, read_comics/templates/account/*, read_comics/templates/bootstrap4/*, read_comics/templates/socialaccount/*,
 plugins = django_coverage_plugin
 source = read_comics
+
+[options]
+python_requires >= 3.9.1
