--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
     hooks:
       - id: flake8
         args: ["--config=setup.cfg"]
-        additional_dependencies: [flake8-isort]
+        additional_dependencies: [flake8-isort==4.1.1,flake8-bugbear==21.11.29,flake8-comprehensions==3.7.0,flake8-return==1.1.3,flake8-quotes==3.3.1,flake8-simplify==0.14.2,flake8-no-pep420==2.0.0,flake8-use-fstring==1.3]
 
 # sets up .pre-commit-ci.yaml to ensure pre-commit dependencies stay up to date
 ci:
