--- a/.gitattributes
+++ b/.gitattributes
@@ -3,5 +3,6 @@ read_comics/static/app-assets/** linguist-vendored
 read_comics/static/fonts/** linguist-vendored
 read_comics/static/images/** linguist-vendored
 read_comics/static/twbsPagination/** linguist-vendored
+read_comics/static/slick/** linguist-vendored
 
 docs/** linguist-documentation
