--- a/production-run.yml
+++ b/production-run.yml
@@ -5,15 +5,17 @@ volumes:
 
 services:
   django: &django
-    image: registry.digitalocean.com/read-comics/app:latest
+    image: cr.yandex/crpkef6i6mmeq12lo3i7/app:latest
     depends_on:
       - redis
+    volumes:
+      - ./root.crt:/home/django/.postgresql/root.crt:z
     env_file:
       - .env
     command: /start
 
   traefik:
-    image: registry.digitalocean.com/read-comics/traefik:latest
+    image: cr.yandex/crpkef6i6mmeq12lo3i7/traefik:latest
     depends_on:
       - django
     volumes:
