--- a/.pylintrc
+++ b/.pylintrc
@@ -1,11 +1,23 @@
 [MASTER]
 load-plugins=pylint_django, pylint_celery
-django-settings-module=config.settings.base
+django-settings-module=config.settings.local
+ignore=migrations
+
+[BASIC]
+good-names=i,
+           j,
+           k,
+           e,
+           _,
+           q,
+           qs,
+           s3
+
 [FORMAT]
 max-line-length=120
 
 [MESSAGES CONTROL]
-disable=missing-docstring,invalid-name
+disable=missing-docstring
 
 [DESIGN]
 max-parents=13
