--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,23 +18,20 @@ on:
 
 
 jobs:
-  linter:
+  flake8:
     runs-on: ubuntu-latest
     steps:
 
       - name: Checkout Code Repository
         uses: actions/checkout@v2
 
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.10"
+      - name: Build the Stack
+        run: docker-compose -f local.yml build
 
-      # Run all pre-commit hooks on all the files.
-      # Getting only staged files can be tricky in case a new PR is opened
-      # since the action is run on a branch in detached head state
-      - name: Install and Run Pre-commit
-        uses: pre-commit/action@v2.0.3
+      - name: Run flake8
+        run: docker-compose -f local.yml run --rm django flake8 --count
+
+
 
   test:
     runs-on: ubuntu-latest
