fix: dev: flake8 ci

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,15 +35,18 @@ warn_unused_configs = True
 plugins = mypy_django_plugin.main, mypy_drf_plugin.main
 
 [mypy.plugins.django-stubs]
-django_settings_module = config.settings.test
+django_settings_module = config.settings.local
 
 [mypy-*.migrations.*]
 # Django migrations should not produce any errors:
 ignore_errors = True
 
 [coverage:run]
-omit = *migrations*, *tests*, read_comics/templates/account/*, read_comics/templates/bootstrap4/*, read_comics/templates/socialaccount/*,
+omit = **/migrations/*
+       **/tests/*
 plugins = django_coverage_plugin
+relative_files = True
+branch = True
 source = read_comics
 
 [options]
