--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,6 @@
+sonar.projectKey=NoNameItem_read-comics
+sonar.organization=nonameitem
+
 sonar.python.version=3.10
 sonar.sources=read_comics
 sonar.tests=read_comics
