--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,8 @@
 sonar.projectKey=NoNameItem_read-comics
 sonar.organization=nonameitem
 
+sonar.qualitygate.wait=true
+
 sonar.python.version=3.10
 sonar.sources=read_comics
 sonar.tests=read_comics
