--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,5 +8,6 @@ sonar.sources=read_comics
 sonar.tests=read_comics
 sonar.test.inclusions=**/test/**
 sonar.exclusions=**/test/**,**/migrations/**
-sonar.python.coverage.reportPaths=coverage.xml
+sonar.python.coverage.reportPaths=coverage_report/coverage.xml
+sonar.python.flake8.reportPaths=flake8_report/flake8.txt
 sonar.projectVersion=1.1.1
