--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,27 @@ jobs:
       - name: Tear down the Stack
         run: docker-compose -f local.yml down
 
-
+#  pylint:
+#    runs-on: ubuntu-latest
+#    steps:
+#
+#      - name: Checkout Code Repository
+#        uses: actions/checkout@v3
+#
+#      - name: Build the Stack
+#        run: docker-compose -f local.yml build
+#
+#      - name: Run pylint
+#        run: docker-compose -f local.yml run --rm django pylint read_comics
+#
+#      - name: Upload flake8 report
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: flake8_report
+#          path: flake8.txt
+#
+#      - name: Tear down the Stack
+#        run: docker-compose -f local.yml down
 
   test:
     runs-on: ubuntu-latest
@@ -55,6 +75,7 @@ jobs:
       - name: Run Django Tests
         run: |
           docker-compose -f local.yml run --rm django pytest --cov --cov-report xml:coverage.xml --cov-report term --cov-config=setup.cfg --junitxml=test_report.xml
+        continue-on-error: True
 
       - name: Upload Coverage report
         uses: actions/upload-artifact@v3
