fix: dev: ci coverage

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ omit = **/migrations/*
 plugins = django_coverage_plugin
 relative_files = True
 branch = True
-source = read_comics
+include = read_comics/**
 
 [options]
 python_requires >= 3.10.0
