fix: dev: ci pylint

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,4 +10,5 @@ sonar.test.inclusions=**/test/**
 sonar.exclusions=**/test/**,**/migrations/**
 sonar.python.coverage.reportPaths=coverage_report/coverage.xml
 sonar.python.flake8.reportPaths=flake8_report/flake8.txt
+sonar.python.pylint.reportPaths=pylint_report/pylint.txt
 sonar.projectVersion=1.1.1
