--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 name: CI
 
+permissions:
+  checks: write
+
 # Enable Buildkit and let compose use it to speed up image building
 env:
   DOCKER_BUILDKIT: 1
@@ -42,27 +45,27 @@ jobs:
         if: success() || failure()
         run: docker-compose -f local.yml down
 
-#  pylint:
-#    runs-on: ubuntu-latest
-#    steps:
-#
-#      - name: Checkout Code Repository
-#        uses: actions/checkout@v3
-#
-#      - name: Build the Stack
-#        run: docker-compose -f local.yml build
-#
-#      - name: Run pylint
-#        run: docker-compose -f local.yml run --rm django pylint read_comics
-#
-#      - name: Upload flake8 report
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: flake8_report
-#          path: flake8.txt
-#
-#      - name: Tear down the Stack
-#        run: docker-compose -f local.yml down
+  pylint:
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Checkout Code Repository
+        uses: actions/checkout@v3
+
+      - name: Build the Stack
+        run: docker-compose -f local.yml build
+
+      - name: Run pylint
+        run: docker-compose -f local.yml run --rm django pylint read_comics --output-format=parseable | tee pylint.txt
+
+      - name: Upload pylint report
+        uses: actions/upload-artifact@v3
+        with:
+          name: pylint_report
+          path: pylint.txt
+
+      - name: Tear down the Stack
+        run: docker-compose -f local.yml down
 
   test:
     runs-on: ubuntu-latest
