--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,7 +106,7 @@ jobs:
 
   sonarcloud:
     if: success() || failure()
-    needs: [ flake8, test ]
+    needs: [ flake8, test, pylint ]
     name: SonarCloud
     runs-on: ubuntu-latest
     steps:
@@ -124,7 +124,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   build:
-    needs: [ flake8, test, sonarcloud ]
+    needs: [ flake8, test, pylint, sonarcloud ]
     runs-on: ubuntu-latest
     if: (github.ref == 'refs/heads/main') && github.event_name == 'push'
 
@@ -144,7 +144,7 @@ jobs:
         run: docker-compose -f production-build.yml push
 
   release:
-    needs: [ flake8, test, sonarcloud ]
+    needs: [ flake8, test, pylint, sonarcloud ]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref_type == 'tag'
 
