--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,15 @@ jobs:
       - name: Build the Stack
         run: docker-compose -f local.yml build
 
+      - name: set pipefall
+        run: set -o pipefail
+
       - name: Run flake8
         run: docker-compose -f local.yml run --rm django flake8 --count --output-file=flake8.txt
+
+      - name: reset pipefail
+        if: success() || failure()
+        run: set +o pipefail
 
       - name: Upload flake8 report
         if: success() || failure()
@@ -55,16 +62,25 @@ jobs:
       - name: Build the Stack
         run: docker-compose -f local.yml build
 
+      - name: set pipefail
+        run: set -o pipefail
+
       - name: Run pylint
         run: docker-compose -f local.yml run --rm django pylint read_comics --output-format=parseable | tee pylint.txt
 
+      - name: reset pipefail
+        if: success() || failure()
+        run: set +o pipefail
+
       - name: Upload pylint report
+        if: success() || failure()
         uses: actions/upload-artifact@v3
         with:
           name: pylint_report
           path: pylint.txt
 
       - name: Tear down the Stack
+        if: success() || failure()
         run: docker-compose -f local.yml down
 
   test:
