fix: dev: ci structure

--- a/.github/workflows/main_branch.yml
+++ b/.github/workflows/main_branch.yml
@@ -20,6 +20,8 @@ jobs:
     uses: ./.github/workflows/publish_reports.yml
     if: success() || failure()
     needs: qa
+    with:
+      publish_test_report: false
 
 #  sonarcloud:
 #    if: success() || failure()
