--- a/.github/workflows/main_branch.yml
+++ b/.github/workflows/main_branch.yml
@@ -22,6 +22,7 @@ jobs:
     needs: qa
     with:
       publish_test_report: false
+    secrets: inherit
 
 #  sonarcloud:
 #    if: success() || failure()
