--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,4 +11,6 @@ sonar.exclusions=**/test/**,**/migrations/**
 sonar.python.coverage.reportPaths=coverage_report/coverage.xml
 sonar.python.flake8.reportPaths=flake8_report/flake8.txt
 sonar.python.pylint.reportPaths=pylint_report/pylint.txt
+x-release-please-start-version
 sonar.projectVersion=1.1.1
+x-release-please-end
