fix: dev: release-please.yml

--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Build the Stack
         run: docker-compose -f local.yml build
 
-      - name: set pipefall
+      - name: set pipefail
         run: set -o pipefail
 
       - name: Run flake8
