--- a/release-please-config.json
+++ b/release-please-config.json
@@ -10,5 +10,6 @@
   },
   "extra-files": [
       "sonar-project.properties"
-  ]
+  ],
+  "bootstrap-sha": "d082e73be155d908bc170327584d4f29b3fc3d84"
 }
