--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [metadata]
 name = read-comics
-version = "1.1.1"
+version = 1.1.1
+
 [flake8]
 max-line-length = 120
 exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,merge_production_dotenvs_in_dotenv.py,manage.py
@@ -8,7 +9,7 @@ extend-select =
     C4,Q0,INP
 inline-quotes = "
 avoid-escape = True
-min_python_version = 3.10.0
+min_python_version = 3.10
 extend-ignore =
     E203,
 
