--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -2,6 +2,12 @@ name: Linters
 
 on:
   workflow_call:
+    inputs:
+      silent_linters:
+        description: Linters don't fail jobs, checking only via sonarcloud quality gate
+        default: false
+        type: boolean
+        required: false
 
 jobs:
   flake8:
@@ -18,12 +24,15 @@ jobs:
       - name: set pipefail
         run: set -o pipefail
 
-      - name: Run flake8
+      - name: Run flake8 silent
+        if: ${{ inputs.silent_linters }}
         run: docker-compose -f local.yml run --rm django flake8 --count | tee flake8.txt
 
-      - name: reset pipefail
-        if: success() || failure()
-        run: set +o pipefail
+      - name: Run flake8
+        if: ${{ !inputs.silent_linters }}
+        run: |
+          set -o pipefail
+          docker-compose -f local.yml run --rm django flake8 --count | tee flake8.txt
 
       - name: Upload flake8 report
         if: success() || failure()
@@ -50,7 +59,12 @@ jobs:
       - name: set pipefail
         run: set -o pipefail
 
+      - name: Run pylint silent
+        if: ${{ inputs.silent_linters }}
+        run: docker-compose -f local.yml run --rm django pylint read_comics --output-format=parseable | tee pylint.txt
+
       - name: Run pylint
+        if: ${{ !inputs.silent_linters }}
         run: |
           set -o pipefail
           docker-compose -f local.yml run --rm django pylint read_comics --output-format=parseable | tee pylint.txt
