--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -15,6 +15,7 @@ jobs:
         run: docker-compose -f local.yml build
 
       - name: Run Django Tests
+        continue-on-error: true
         run: docker-compose -f local.yml run --rm django pytest --cov read_comics --cov-report xml:coverage.xml --cov-report term --cov-config=setup.cfg --junitxml=test_report.xml
 
       - name: Save Coverage report artifact
