--- a/.github/workflows/publish_reports.yml
+++ b/.github/workflows/publish_reports.yml
@@ -2,6 +2,7 @@ name: Publish reports
 
 permissions:
   checks: write
+  pull-requests: write
 
 on:
   workflow_call:
@@ -43,37 +44,3 @@ jobs:
         id: test-results
         with:
           files: "test_report/*.xml"
-
-      - name: Set badge color
-        shell: bash
-        run: |
-          case ${{ fromJSON( steps.test-results.outputs.json ).conclusion }} in
-            success)
-              echo "BADGE_COLOR=31c653" >> $GITHUB_ENV
-              ;;
-            failure)
-              echo "BADGE_COLOR=800000" >> $GITHUB_ENV
-              ;;
-            neutral)
-              echo "BADGE_COLOR=696969" >> $GITHUB_ENV
-              ;;
-          esac
-
-      - name: Create badge
-        uses: emibcn/badge-action@d6f51ff11b5c3382b3b88689ae2d6db22d9737d1
-        with:
-          label: Tests
-          status: '${{ fromJSON( steps.test-results.outputs.json ).formatted.stats.tests }} tests, ${{ fromJSON( steps.test-results.outputs.json ).formatted.stats.runs }} runs: ${{ fromJSON( steps.test-results.outputs.json ).conclusion }}'
-          color: ${{ env.BADGE_COLOR }}
-          path: badge.svg
-
-      - name: Upload badge to Gist
-        # Upload only for master branch
-        if: >
-          github.event_name == 'workflow_run' && github.event.workflow_run.head_branch == 'master' ||
-          github.event_name != 'workflow_run' && github.ref == 'refs/heads/master'
-        uses: andymckay/append-gist-action@1fbfbbce708a39bd45846f0955ed5521f2099c6d
-        with:
-          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
-          gistURL: https://gist.githubusercontent.com/NoNameItem/be837e880eb3621d2153ac9a6bcacf66
-          file: badge.svg
