--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,6 +2,7 @@ name: Pull request
 
 permissions:
   checks: write
+  pull-requests: write
 
 # Enable Buildkit and let compose use it to speed up image building
 env:
