chore: test linters (#89)
feat: sonar badges

feat: disable codecov

feat: test publishing

fix: delete codecov badge

feat: unit test continue in error

feat: test publishing

fix: test publishing permissions

fix: test publishing fail job on test fails

fix: fixed failing test

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -2,6 +2,7 @@ name: Pull request
 
 permissions:
   checks: write
+  pull-requests: write
 
 # Enable Buildkit and let compose use it to speed up image building
 env:
@@ -16,6 +17,8 @@ on:
 jobs:
   qa:
     uses: ./.github/workflows/qa.yml
+    with:
+      silent_linters: true
   publish_reports:
     uses: ./.github/workflows/publish_reports.yml
     if: success() || failure()
