--- a/.github/workflows/publish_reports.yml
+++ b/.github/workflows/publish_reports.yml
@@ -1,13 +1,12 @@
 name: Publish reports
 
+permissions:
+  checks: write
+  pull-requests: write
+
 on:
   workflow_call:
     inputs:
-      publish_codecov:
-        description: Codecov
-        default: true
-        type: boolean
-        required: false
       publish_test_report:
         description: Publish test report to github
         default: true
@@ -39,22 +38,10 @@ jobs:
     steps:
       - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v3
-        if: success() || failure() # always run even if the previous step fails
-        with:
-          report_paths: 'test_report.xml'
 
-  codecov:
-    name: CodeCov
-    runs-on: ubuntu-latest
-    if: inputs.publish_codecov
-    steps:
-      - name: Download all workflow run artifacts
-        uses: actions/download-artifact@v2
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        id: test-results
         with:
-          fail_ci_if_error: false
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage_report/coverage.xml
+          files: "test_report/*.xml"
+          action_fail: true
