ci(github-actions): github workflow for develop branch

--- a/.dockerignore
+++ b/.dockerignore
@@ -9,3 +9,26 @@
 .travis.yml
 venv
 .envs
+/sonar-project.properties
+/release-please-config.json
+/README.rst
+/pytest.ini
+/pyproject.toml
+/pylint.txt
+/production-run.yml
+/production-build.yml
+/merge_production_dotenvs_in_dotenv.py
+/local.yml
+/flake8.txt
+/coverage.xml
+/conventionalcommit.json
+/codecov.yml
+/CHANGELOG.md
+/.release-please-manifest.json
+/.pylintrc
+/.gitchangelog.rc
+/.env
+/.coverage
+/.codeclimate.yml
+/.pytest_cache/
+/.ipython/
